# GEM_garfield

./: .gitignore  CMakeLists.txt  README.md  gen_all.sh  gen_fieldmap.py  gen_gasfile.cpp  gen_scripts.py  params.txt  plot_gasfile.cpp  simple_track.cpp  tgem.cpp  tgem_gain.cpp  view_tgem.cpp
SRIM/: cal_density.cpp
SRIM/he_iC4H10/90_10/: he_iC4H10_90_10_076.txt  he_iC4H10_90_10_152.txt  he_iC4H10_90_10_228.txt  he_iC4H10_90_10_304.txt  he_iC4H10_90_10_380.txt  he_iC4H10_90_10_456.txt  he_iC4H10_90_10_532.txt  he_iC4H10_90_10_608.txt  he_iC4H10_90_10_684.txt  he_iC4H10_90_10_760.txt
condor/: condor_run.sh  condor_single.sh  merge_tree.cpp
include/: ComponentFactory.hpp  DataStruct.hpp~  Errors.hpp  Exception.hpp  FieldMapBuilder.hpp  MediumMagboltzFactory.hpp  ParManager.hpp  TGemViewerBase.hpp  TGemViewerDrift.hpp  TGemViewerField.hpp
include/SRIM/: SrimTrackBuilder.hpp
include/analyzer/: GainEventAnalyzer.hpp  IEventAnalyzer.hpp  RunAnalyzer.hpp
parameters/: params.txt  vg100.txt  vg110.txt  vg120.txt  vg130.txt  vg140.txt  vg150.txt  vg160.txt  vg170.txt
pysource/: dielectrics.py  gen_fieldmap.py  gen_scripts.py  geometry.py  parManager.py  startinfo.py  tgemcell_geo.py  tgemcell_sif.py
resources/SRIM/: He_90_iC4H10_10_0076.txt  He_90_iC4H10_10_0152.txt  He_90_iC4H10_10_0228.txt  He_90_iC4H10_10_0304.txt  He_90_iC4H10_10_0380.txt  He_90_iC4H10_10_0456.txt  He_90_iC4H10_10_0532.txt  He_90_iC4H10_10_0608.txt  He_90_iC4H10_10_0684.txt  He_90_iC4H10_10_0760.txt
resources/gas_file/: Ar_90_iC4H10_10_0076.gas  He_85_iC4H10_15_0076.gas  He_85_iC4H10_15_0152.gas  He_85_iC4H10_15_0228.gas  He_85_iC4H10_15_0304.gas  He_85_iC4H10_15_0380.gas  He_85_iC4H10_15_0456.gas  He_85_iC4H10_15_0532.gas  He_85_iC4H10_15_0608.gas  He_85_iC4H10_15_0684.gas  He_85_iC4H10_15_0760.gas  He_90_iC4H10_10_0076.gas  He_90_iC4H10_10_0152.gas  He_90_iC4H10_10_0228.gas  He_90_iC4H10_10_0304.gas  He_90_iC4H10_10_0380.gas  He_90_iC4H10_10_0456.gas  He_90_iC4H10_10_0532.gas  He_90_iC4H10_10_0608.gas  He_90_iC4H10_10_0684.gas  He_90_iC4H10_10_0760.gas  He_95_iC4H10_05_0304.gas  He_95_iC4H10_05_0380.gas  He_95_iC4H10_05_0456.gas  He_95_iC4H10_05_0532.gas  He_95_iC4H10_05_0608.gas  He_95_iC4H10_05_0684.gas  He_95_iC4H10_05_0760.gas
scripts/: condor_single.sh  gen_all.sh  gen_fieldmap.py  gen_gasfile.sh  gen_parfile.py  gen_scripts.py
source/: ComponentFactory.cpp  FieldMapBuilder.cpp  MediumMagboltzFactory.cpp  ParManager.cpp  TGemViewerDrift.cpp  TGemViewerField.cpp
source/SRIM/: SrimTrackBuilder.cpp
source/analyzer/: GainEventAnalyzer.cpp
templates/: dielectrics_template.txt  geometry_template.txt  parameter_template.txt  startinfo_template.txt
